--- a/.config/i3/config
+++ b/.config/i3/config
@@ -66,7 +66,14 @@ bindsym $mod+ctrl+l exec i3lock-fancy-dualmonitor
 # Start Applications
 bindsym $mod+f exec thunar
 
-bindsym $mod+Tab exec --no-startup-id rofi -show window #-font "Ubuntu 11" -fg "#dcdcdc" -bg "#444444" -hlfg "#f9f9f9" -hlbg "#1D90CD" -opacity 92 -separator-style solid -line-margin 3 -bw 3 -bc "#444444" -hide-scrollbar -width 600 -bg-active "#444444" -fg-active "#1D90CD" -hlfg-active "#f9f9f9" -bghl-active "#1D90CD"
+bindsym $mod+Tab exec --no-startup-id rofi -show window 
+bindsym $mod+o exec --no-startup-id rofi -show ssh 
+
+# start dmenu (a program launcher)
+#bindsym $mod+d exec dmenu_run
+# There also is the (new) i3-dmenu-desktop which only displays applications shipping a .desktop file. It is a wrapper around dmenu, so you need that installed.
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu -i'
+
 
 set $WS1 1
 set $WS2 2
@@ -98,11 +105,6 @@ exec ~/.custom/bg_script.sh
 exec thunderbird
 #exec qbittorrent
 exec $editor
-
-# start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications shipping a .desktop file. It is a wrapper around dmenu, so you need that installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu -i'
 
 # change focus
 bindsym $mod+h focus left
