--- a/.config/i3/config
+++ b/.config/i3/config
@@ -65,7 +65,7 @@ bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
 
 
 # lock screen
-bindsym $mod+ctrl+l exec i3lock-fancy-dualmonitor 
+bindsym $mod+ctrl+l exec i3lock-fancy 
 
 # Start Applications
 bindsym $mod+f exec thunar
@@ -90,7 +90,7 @@ set $WS8 8
 set $WS9 9:Mail
 set $WS10 10
 
-bindsym $mod+x move workspace to output right
+bindsym $mod+x move workspace to output up
 
 #Open applications on specific workspace
 assign [class="Thunderbird"] $WS9
